--- a/gallery.html
+++ b/gallery.html
@@ -10,8 +10,8 @@
     <body>
 
         <nav class="topnav">
-            <a class="active" href="#Home">Home</a>
-            <a href="gallery.html">Galeria</a>
+            <a href="index.html">Home</a>
+            <a class="active" href="#Gallery">Galeria</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </nav>
