Animation and xml

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-dropdown.css">
+        <link rel="stylesheet" href="css/style-nav.css">
         <link rel="stylesheet" href="css/custom-light.css" id="jqrLight">
         <link rel="stylesheet" href="css/style-light.css" id="cssLight">
         <script src="jquery/jquery-1.11.2.min.js"></script>
@@ -16,6 +18,9 @@
     <body class="body body-theme">
 
         <nav class="topnav topnav-theme">
+            <svg width="48" height="48" class="svg-class">
+                <rect x="14" y="14" width="20" height="20" stroke="black" stroke-width="4" fill="grey" />
+            </svg>
             <span class="span-nav"> Projekt HIH </span>
             <img src="img/sun.png" id="modeImg1" alt="sun">
             <label class="switch">
@@ -30,15 +35,15 @@
             <div class="dropdown">
                 <div class="dropbtn">Influencers</div>
                 <div class="dropdown-content">
-                  <a href="https://www.youtube.com/@EthanChlebowski">Ethan Chlebowski</a>
-                  <a href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw">Binging With Babish</a>
-                  <a href="https://www.youtube.com/@aragusea">Adam Ragusea</a>
+                  <a class="anim1" href="https://www.youtube.com/@EthanChlebowski">Ethan Chlebowski</a>
+                  <a class="anim2" href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw">Binging With Babish</a>
+                  <a class="anim3" href="https://www.youtube.com/@aragusea">Adam Ragusea</a>
                 </div>
             </div>
 
         </nav>
         <nav class="sidenav sidenav-theme">
-            <span class="span-nav span-nav-theme"> Projekt HIH </span>
+            <span class="span-nav span-nav-side span-nav-theme"> Projekt HIH </span>
             <img src="img/sun.png" id="modeImg2" alt="sun">
             <label class="switch">
                 <input id="checkBox2" type="checkbox" onclick="manageModes();">
@@ -50,9 +55,9 @@
             <div class="dropdown">
                 <div class="dropbtn-side">Influencers</div>
                 <div class="dropdown-content">
-                  <a href="https://www.youtube.com/@EthanChlebowski">Ethan Chlebowski</a>
-                  <a href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw">Binging With Babish</a>
-                  <a href="https://www.youtube.com/@aragusea">Adam Ragusea</a>
+                  <a class="anim1" href="https://www.youtube.com/@EthanChlebowski">Ethan Chlebowski</a>
+                  <a class="anim2" href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw">Binging With Babish</a>
+                  <a class="anim3" href="https://www.youtube.com/@aragusea">Adam Ragusea</a>
                 </div>
             </div>   
 
