--- a/recipe.html
+++ b/recipe.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-dropdown.css">
+        <link rel="stylesheet" href="css/style-nav.css">
         <link rel="stylesheet" href="css/custom-light.css" id="jqrLight">
         <link rel="stylesheet" href="css/style-light.css" id="cssLight">
         <script src="jquery/jquery-1.11.2.min.js"></script>
