--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title> Moje Hobby</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta charset="utf-8">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/style-dropdown.css">
         <link rel="stylesheet" href="css/style-nav.css">
@@ -35,9 +36,9 @@
             <div class="dropdown">
                 <div class="dropbtn">Influencers</div>
                 <div class="dropdown-content">
-                  <a class="anim1" href="https://www.youtube.com/@EthanChlebowski">Ethan Chlebowski</a>
-                  <a class="anim2" href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw">Binging With Babish</a>
-                  <a class="anim3" href="https://www.youtube.com/@aragusea">Adam Ragusea</a>
+                  <a class="anim1" href="https://www.youtube.com/@EthanChlebowski" target="_blank">Ethan Chlebowski</a>
+                  <a class="anim2" href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw" target="_blank">Binging With Babish</a>
+                  <a class="anim3" href="https://www.youtube.com/@aragusea" target="_blank">Adam Ragusea</a>
                 </div>
             </div>
 
@@ -55,9 +56,9 @@
             <div class="dropdown">
                 <div class="dropbtn-side">Influencers</div>
                 <div class="dropdown-content">
-                  <a class="anim1" href="https://www.youtube.com/@EthanChlebowski">Ethan Chlebowski</a>
-                  <a class="anim2" href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw">Binging With Babish</a>
-                  <a class="anim3" href="https://www.youtube.com/@aragusea">Adam Ragusea</a>
+                  <a class="anim1" href="https://www.youtube.com/@EthanChlebowski" target="_blank">Ethan Chlebowski</a>
+                  <a class="anim2" href="https://www.youtube.com/channel/UCJHA_jMfCvEnv-3kRjTCQXw" target="_blank">Binging With Babish</a>
+                  <a class="anim3" href="https://www.youtube.com/@aragusea" target="_blank">Adam Ragusea</a>
                 </div>
             </div>   
 
